Add student and teacher page